--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		    S = Backward
 		    D = Turn Right
 		    R = Hyperspace
-		    Space = Brake
+		    B = Brake
 		    APCSA Kenny
 	    </footer>
 	</body>
