--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    W = Forward
-		    A = Turn Left
-		    S = Backward
-		    D = Turn Right
-		    R = Hyperspace
-		    B = Brake
+		    W = Forward;
+		    A = Turn Left;
+		    S = Backward;
+		    D = Turn Right;
+		    R = Hyperspace;
+		    B = Brake;
 		    APCSA Kenny
 	    </footer>
 	</body>
