--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		    S = Backward;
 		    D = Turn Right;
 		    R = Hyperspace;
-		    B = Brake;
+		    B = Brake;<br>
 		    APCSA Kenny
 	    </footer>
 	</body>
