--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<h1>Star Wars U Wing</h1>
 		</header>
 			<section id="content">
-				<canvas id="AsteroidsGame" data-processing-sources="AsteroidsGame.pde Floater.pde Spaceship.pde Star.pde Asteriod.pde">
+				<canvas id="AsteroidsGame" data-processing-sources="AsteroidsGame.pde Floater.pde Spaceship.pde Star.pde Asteriod.pde Bullet.pde">
 				</canvas>
 		    </section>
 	    <footer>
