--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		    D = Turn Right;
 		    R = Hyperspace;
 		    B = Brake;<br>
+		    Space = Fire;
 		    APCSA Kenny
 	    </footer>
 	</body>
