--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 		    S = Backward;
 		    D = Turn Right;
 		    R = Hyperspace;
-		    B = Brake;<br>
-		    Space = Fire;
+		    B = Brake;
+		    Space = Fire;<br>
 		    APCSA Kenny
 	    </footer>
 	</body>
